# beyond-chatting

./: .gitignore  README.md  pyproject.toml
lessons/: lesson01.ipynb
src/beyond_chatting/: __about__.py  __init__.py  client.py  inputs.py  llm.py  utils.py
