[project]
name = "beyond-chatting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gregor Betz", email = "3662782+ggbetz@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
