[project]
name = "beyond-chatting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gregor Betz", email = "3662782+ggbetz@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.29.1",
    "multipledispatch>=1.0.0",
    "openai>=1.64.0",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
